--- a/reactCaseStudy/src/styles/custom.css
+++ b/reactCaseStudy/src/styles/custom.css
@@ -3,5 +3,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100vh;
+    padding:200px;
+    background-color: #906f8d;
+
   }
   
