--- a/reactCaseStudy/src/styles/custom.css
+++ b/reactCaseStudy/src/styles/custom.css
@@ -6,7 +6,11 @@
     width: 100%;
     height: 100vh;
     padding:200px;
-    background-color: #906f8d;
+    background-color: #FBF3D5;
 
+  }
+  .test {
+    display: grid;
+    place-items: center;
   }
   
